Рефакторинг консьюмеров Kafka (часть 2)